fix: nav items visibility

--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -815,6 +815,7 @@ body {
   left: 0;
   z-index: 1500;
   opacity: 0;
+  visibility: hidden;
   width: 0;
   transition: all 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6); }
 
@@ -855,6 +856,7 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
+  visibility: visible;
   width: 100%; }
 
 .navigation__icon {
